# stt-bench

./: .gitignore  README.md  pyproject.toml  uv.toml
data/: README.md
docs/: methodology.md
model-envs/: README.md
model-envs/cohere/: pyproject.toml  uv.toml
model-envs/parakeet/: pyproject.toml
model-envs/qwen3/: pyproject.toml
model-envs/whisper/: pyproject.toml
results/: README.md
scripts/: run-model
src/stt_bench/: __init__.py  audio_io.py  cli.py  manifest.py
src/stt_bench/conditions/: codec.py  generator.py  mic.py  noise.py  reverb.py
src/stt_bench/data/: fetch_assets.py  select_sources.py
src/stt_bench/runners/: __init__.py  cohere_runner.py  parakeet_runner.py  qwen3_asr_runner.py  whisper_runner.py
src/stt_bench/scoring/: normalize.py  score.py
tests/: test_cli.py  test_scoring.py
