[project]
name = "stt-bench"
version = "0.1.0"
description = "Real-world robustness benchmarks for speech-to-text systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jiwer>=3.0",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.26",
    "requests>=2.31",
    "scipy>=1.11",
    "datasets>=2.19",
]

[project.optional-dependencies]
local = [
    "torch>=2.3",
    "torchaudio>=2.3",
    "transformers>=4.41",
    "accelerate>=0.30",
]
api = [
    "cohere>=5.5",
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
effects = [
    "pedalboard>=0.9",
]
all = [
    "stt-bench[local,api,dev,effects]",
]

[project.scripts]
stt-bench = "stt_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
